<?xml version="1.0"?>
<package>
  <name>planner</name>
  <version>0.1.0</version>
  <description>The McGill Robotics planner package</description>

  <maintainer email="mr@anassinator.com">Anass Al</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
